--- a/Frontend/src/Component/navbar/Navbar.css
+++ b/Frontend/src/Component/navbar/Navbar.css
@@ -27,7 +27,8 @@ li {
   width: 100%;
   height: 10rem;
   display: grid;
-  position: relative;
+  position: fixed;
+  background-color: white;
   z-index: 99;
   grid-template-columns: 10rem 30fr 40fr 1fr 10rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
